@@ -1,3 +1,8 @@
+2010-08-31  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_gridinfo.c: Move grids in 180 to 360 region to -180 to 0. 
+	Improve error/debug reporting. 
+
 2010-08-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* nad/test*: default to using ../src/cs2cs
